# quantoracle

./: .env.example  .gitattributes  .gitignore  .mcp.json  BAZAAR_INQUIRY.md  LICENSE  OPERATIONS.md  README.md  SETUP-GA4-MCP.md  docker-compose.yml  glama.json  openapi.json  smithery.yaml
.claude/: launch.json
.github/: CODEOWNERS
.well-known/: ai-plugin.json
api/: Dockerfile  quantoracle.py  requirements.txt
cli/: README.md  package.json
deploy/: backup-db.sh  deploy.sh  nginx.conf  quantoracle-backup.service  quantoracle-backup.timer  quantoracle-mcp.service  quantoracle-sampler.service  quantoracle-sampler.timer  quantoracle-watch.service  quantoracle.service  sampler.sh  watcher.py
examples/: agent_demo.py  backtest_agent.py  strategy_optimizer.py
integrations/: PUBLISHING.md
integrations/langchain/: DEVTO_TUTORIAL.md  README.md  pyproject.toml
integrations/langchain/cookbook/: DISCORD_POST.md  README.md  SHARE_POSTS.md  quantoracle_risk_analyst.ipynb
integrations/langchain/langchain_quantoracle/: __init__.py  toolkit.py
integrations/langchain/langchain_quantoracle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp/: mcp.json
mcp-gsc/: server.py
mcp-server/: Dockerfile  README.md  SKILL.md  package-lock.json  package.json  server.json
ops/: gsc-weekly.py  morning-brief.py  worker-watch.sh
rapidapi/: LISTING.md  openapi.json
scripts/: .gitignore  gen-rapidapi-spec.py  package.json  seed.mjs  test-catalog.mjs
site/: MONETIZATION.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+243 files in other folders)
